# mnist-web-inference

./: .gitignore  README.md  app.js  export_onnx.py  index.html  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  train.py  webpack.config.js
.github/workflows/: deploy.yml
models/: mnist.onnx  mnist_best.pth
src/mnist_web_inference/: __init__.py
