[project]
name = "mnist-web-inference"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexis Chochina", email = "alexis@fcinq.com" }
]
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "numpy>=2.3.2",
    "onnx>=1.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mnist_web_inference"]
